Closed Bug 1729011 Opened 3 years ago Closed 3 years ago

nsCOMPtr.h has broken link to user guide on MDN

Categories

(Core :: XPCOM, defect)

defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox93 --- fixed

People

(Reporter: bryce, Assigned: bryce)

References

Details

Attachments

(1 file)

With Mozilla specific docs being removed from MDN this link in nsCOMPtr.h is now dead.

The source docs have some stuff on ref ptrs. It's not the same info as was on MDN, but is better than nothing.

Pushed by bvandyk@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b6fdb5fcdd0f
Change dead link to MDN in nsCOMPtr.h to reference source docs. r=xpcom-reviewers,mccr8 DONTBUILD
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
Duplicate of this bug: 1723184
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: