Bug 1729011 - Change dead link to MDN in nsCOMPtr.h to reference source docs. r=xpcom-reviewers,mccr8 DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D124461